WTF - Designing of HMS

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11264,7 +11264,7 @@ body {
 }
 
 .sd-container {
-  background-color: #ffffff;
+  background-color: #d7d7d7;
   border-radius: 8px;
   width: 80%;
   padding: 20px;
