--- a/templates/admin/edit_profile.html
+++ b/templates/admin/edit_profile.html
@@ -51,7 +51,7 @@
                 
                 <br>
                 <div class="sd-buttons">
-                    <button type="submit" class="sd-submit">Save Changes</button>
+                    <button style="background-color:#003366" type="submit" class="sd-submit">Save Changes</button>
                 </div>
             </form>
         </div>
