--- a/templates/distributor/d_orders.html
+++ b/templates/distributor/d_orders.html
@@ -52,7 +52,7 @@
                 {% if orders_data %}
                 <div class="table-responsive">
                     <table id="OrderTable" class="table table-striped table-bordered table-hover">
-                        <thead class="thead-dark text-center">
+                        <thead class="text-center" style="background-color: #003366; color: #ffff;">
                             <tr>
                                 <th>Sr No</th>
                                 <th>Order ID</th>
