--- a/templates/manager/manager_header.html
+++ b/templates/manager/manager_header.html
@@ -72,7 +72,7 @@
                         <div class="nav">
                             <p class="text-center">
                                 {% if encoded_image %}
-                                <div>
+                                <div class="profile-image-wrapper">
                                     <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 80px; height: 80px;">
                                 </div>
                                 {% endif %}
@@ -84,19 +84,19 @@
                                 <!-- Super Distributor Home -->
                                 <a class="nav-link" href="{{ url_for('manager.manager_home')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                    <strong>Dashboard</strong>
+                                    Dashboard
                                 </a>
 
                                 <!-- Super Distributor Dashboard -->
                                 <a class="nav-link" href="{{ url_for('dashboard.manager_dashboard')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
-                                    <strong>Statistics</strong>
+                                    Statistics
                                 </a>
 
                                 <!-- Super Distributor Section -->
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseSuperDistributor" aria-expanded="false" aria-controls="collapseSuperDistributor">
                                     <div class="sb-nav-link-icon"><i class="fas fa-warehouse"></i></div>
-                                    <strong>Super Distributor</strong>
+                                    Super Distributor
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
                                 <div class="collapse" id="collapseSuperDistributor" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
@@ -109,7 +109,7 @@
                                 <!-- Distributor Section -->
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseDistributor" aria-expanded="false" aria-controls="collapseDistributor">
                                     <div class="sb-nav-link-icon"><i class="fas fa-truck-loading"></i></div>
-                                    <strong>Distributor</strong>
+                                    Distributor
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
                                 <div class="collapse" id="collapseDistributor" aria-labelledby="headingThree" data-bs-parent="#sidenavAccordion">
@@ -122,7 +122,7 @@
                                 <!-- Kitchens Section -->
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseKitchens" aria-expanded="false" aria-controls="collapseKitchens">
                                     <div class="sb-nav-link-icon"><i class="fas fa-utensils"></i></div>
-                                    <strong>Kitchens</strong>
+                                    Kitchens
                                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                                 </a>
                                 <div class="collapse" id="collapseKitchens" aria-labelledby="headingFour" data-bs-parent="#sidenavAccordion">
@@ -139,7 +139,7 @@
                         <!-- Cuisine Section -->
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseCuisine" aria-expanded="false" aria-controls="collapseKitchens">
                             <div class="sb-nav-link-icon"><i class="fas fa-pizza-slice"></i></div>
-                            <strong>Food & Dining</strong>
+                            Food & Dining
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="collapseCuisine" aria-labelledby="headingFour" data-bs-parent="#sidenavAccordion">
@@ -150,8 +150,11 @@
                             </nav>
                         </div>
                         <div class="sb-sidenav-footer">
-                            <div class="small">Logged in as:</div>
-                            {{ role }}
+                            <div class="d-flex align-items-center">
+                                <i class="fa-solid fa-arrow-right-to-bracket mr-2"></i>
+                                <span class="small text-muted">Logged in as :</span>
+                            </div>
+                            <span class="font-weight-bold ml-4">{{ role }}</span>
                         </div>
                     </div>
                 </nav>
