--- a/templates/wallet.html
+++ b/templates/wallet.html
@@ -51,7 +51,7 @@
                 bottom: -5px; /* Adjust to position the underline */
                 width: 0; /* Initially, the underline has no width */
                 height: 3px; /* Thickness of the underline */
-                background-color: rgb(199, 38, 185);
+                background-color: #003366;
                 transition: width 0.3s ease-in-out; /* Add transition for smooth animation */
             }
 
