--- a/templates/add_cuisine.html
+++ b/templates/add_cuisine.html
@@ -36,7 +36,7 @@
                       </div>
                 <br>
                 <div class="sd-buttons">
-                    <button type="submit" class="sd-submit">Submit</button>
+                    <button style="background-color: #003366;" type="submit" class="sd-submit">Submit</button>
                 </div>
             </form>
         </div>
