--- a/templates/admin/user_profile.html
+++ b/templates/admin/user_profile.html
@@ -25,7 +25,7 @@
             flex-direction: column;
             min-width: 0;
             word-wrap: break-word;
-            background-color: #f7f3f3;
+            background-color: #d7d7d7;
             background-clip: border-box;
             border: 0 solid rgba(0,0,0,.125);
             border-radius: .23rem;
@@ -60,6 +60,14 @@
             box-shadow: none!important;
         }
 
+        .text {
+          color: #525151;
+        }
+
+        .mb-0, .mb-1{
+          color:#003366;
+        }
+
     </style>
 </head>
 <div id="layoutSidenav_content">
@@ -80,21 +88,21 @@
               {% endif %}
           {% endwith %}
               <div class="main-body">
-                  <div class="row gutters-sm">
-                      <div class="col-md-4 mb-3">
+                  <div class="row gutters-sm" style="margin-left: 55px; margin-top: 25px;">
+                      <div class="col-md-5 mb-3">
                         <div class="card ">
                           <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
                               <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 127px; height: 127px;">
                               <div class="mt-3">
                                 <h4>{{ user.name }}</h4>
-                                <p class="text-secondary mb-1">{{ role }}</p>
+                                <p class="mb-1">{{ role }}</p>
                               </div>
                             </div>
                           </div>
                         </div>
                       </div>
-                      <div class="col-md-5">
+                      <div class="col-md-6">
                         <div class="card mb-3">
                           <div class="card-body">
                             <div class="row">
@@ -105,7 +113,7 @@
                                   <h6 class="mb-0">Name</h6>
                                 {% endif %}
                               </div>
-                              <div class="col-sm-9 text-primary">
+                              <div class="col-sm-9 text">
                                   {{ user.name }}
                               </div>
                             </div>
@@ -114,7 +122,7 @@
                               <div class="col-sm-3">
                                 <h6 class="mb-0">Email</h6>
                               </div>
-                              <div class="col-sm-9 text-primary">
+                              <div class="col-sm-9 text">
                                 {{ user.email }}
                               </div>
                             </div>
@@ -123,7 +131,7 @@
                               <div class="col-sm-3">
                                 <h6 class="mb-0">Mobile</h6>
                               </div>
-                              <div class="col-sm-9 text-primary">
+                              <div class="col-sm-9 text">
                                   {{ user.contact }}
                               </div>
                             </div>
@@ -133,7 +141,7 @@
                               <div class="col-sm-3">
                                 <h6 class="mb-0">Address</h6>
                               </div>
-                              <div class="col-sm-9 text-primary">
+                              <div class="col-sm-9 text">
                                 {{ user.address }}
                               </div>
                             </div>
