--- a/templates/food_item.html
+++ b/templates/food_item.html
@@ -21,7 +21,9 @@
                     {% for item in food_items %}
                         <div class="col-md-3 mb-4">
                             <div class="card shadow-sm h-100">
-                                <img src="{{ item.image_base64 }}" class="card-img-top" alt="Food Image" style="width: 297px; height: 250px;">
+                                <div style="width: 255px; height: 250px;">
+                                    <img src="{{ item.image_base64 }}" class="card-img-top" alt="Food Image">
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ item.item_name }}</h5>
                                     <p class="card-text"><strong>Cuisine -</strong> {{ item.cuisine.name }}</p>
