--- a/templates/super_distributor/sd_header.html
+++ b/templates/super_distributor/sd_header.html
@@ -68,7 +68,7 @@
                         <div class="nav">
                             <p class="text-center">
                                 {% if encoded_image %}
-                                <div>
+                                <div class="profile-image-wrapper">
                                     <img src="data:image/jpeg;base64,{{ encoded_image }}" alt="Profile Image" class="profile-image" style="width: 80px; height: 80px;">
                                 </div>
                                 {% endif %}
@@ -78,15 +78,15 @@
                             </p>
                             <a class="nav-link" href="{{ url_for('super_distributor.super_distributor')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                <strong>Dashboard</strong>
+                                Dashboard
                             </a> 
                             <a class="nav-link" href="{{ url_for('dashboard.super_distributor_dashboard')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
-                                <strong>Statistics</strong>
+                                Statistics
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-truck-loading"></i></div>
-                                <strong>Distributor</strong>
+                                Distributor
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
@@ -97,7 +97,7 @@
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-utensils"></i></div>
-                                <strong>Kitchens</strong>
+                                Kitchens
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
@@ -113,8 +113,11 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        {{ role }}
+                        <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-arrow-right-to-bracket mr-2"></i>
+                            <span class="small text-muted">Logged in as :</span>
+                        </div>
+                        <span class="font-weight-bold ml-4">{{ role }}</span>
                     </div>
                 </nav>
             </div>
