--- a/static/css/sales_report.css
+++ b/static/css/sales_report.css
@@ -25,7 +25,7 @@
     bottom: -5px; /* Adjust to position the underline */
     width: 0; /* Initially, the underline has no width */
     height: 3px; /* Thickness of the underline */
-    background-color: rgb(199, 38, 185);
+    background-color: #003366;
     transition: width 0.3s ease-in-out; /* Add transition for smooth animation */
 }
  
@@ -38,6 +38,15 @@
     justify-content: space-around;
     margin-bottom: 20px;
 }
+.card {
+    background: #fdfefe;
+    border: 1px solid #dfedf8;
+    border-radius: 20px;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
  
 .card h2 {
     font-size: 18px;
@@ -48,4 +57,20 @@
     font-size: 24px;
     font-weight: bold;
     color: #333;
+}
+.chart-container {
+    background: #fdfefe;
+    border: 1px solid #dfedf8;
+    border-radius: 8px;
+    padding: 10px; /* Reduced padding */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex; /* Ensures proper alignment */
+    flex-direction: column;
+    justify-content: column; /* Centers the chart horizontally */
+    align-items: center; /* Centers the chart vertically */
+}
+
+.dashboard-header {
+    text-align: center;
+    margin-bottom: 20px;
 }
