--- a/templates/admin/order_list.html
+++ b/templates/admin/order_list.html
@@ -13,27 +13,43 @@
             </header>
 
             <div class="row dashboard-summary text-center mb-4">
-                <div class="col-md-4">
-                    <div class="card p-3">
+                <div class="col-md-6">
+                    <div class="card p-2">
                         <h2>Total Orders</h2>
                         <p>{{ total_order_count }}</p>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card p-2">
+                                    <h6>Pending</h6>
+                                    <p class="pending" style="font-size: 1.5rem;">{{ total_pending_orders }}</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card p-2">
+                                    <h6>Completed</h6>
+                                    <p class="pending" style="font-size: 1.5rem;">{{ total_completed_orders }}</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card p-2">
+                                    <h6>Cancelled</h6>
+                                    <p class="pending" style="font-size: 1.5rem;">{{ total_cancelled_orders }}</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                
                 <div class="col-md-4">
-                    <div class="card p-3">
-                        <h2>Completed Orders</h2>
-                        <p>{{ total_completed_orders }}</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card p-3">
+                    <div class="card p-3" style="margin-top: 10%;">
                         <h2>Quantity Sold</h2>
                         <p>{{ total_quantity_sold }}</p>
                     </div>
                 </div>
             </div>
+            
 
-            <div class="card shadow mt-5">
+            <div class="card shadow mt-5 p-2">
                 <div class="card-header py-3 d-flex justify-content-between align-items-center">
                     <h6 class="font-weight-bold">ORDER LIST</h6>
                     <!-- Filter Dropdown -->
@@ -53,12 +69,12 @@
                             <option value="completed" {% if request.args.get('status') == 'completed' %}selected{% endif %}>Completed</option>
                         </select>
 
-                        <button type="submit" class="btn btn-primary">Apply Filter</button>
+                        <button type="submit" class="btn" style="background-color: #003366; color:#ffffff">Apply Filter</button>
                     </form>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="OrderTable">
-                        <thead class="thead-dark text-center">
+                        <thead class="thead text-center"  style="background-color: #003366; color:#ffffff">
                             <tr>
                                 <th>Order ID</th>
                                 <th>User ID</th>
@@ -94,6 +110,7 @@
             </div>
         </div>
     </main>
+    <br>
     <script src="{{ url_for('static', filename='sales_report.js') }}"></script>
 {% include 'admin/admin_footer.html' %}
 </div>
