--- a/templates/admin/sales_report.html
+++ b/templates/admin/sales_report.html
@@ -17,7 +17,7 @@
             <div class="row dashboard-summary text-center mb-4">
                 <div class="col-md-4">
                     <div class="card p-3">
-                        <h2>Total Sales (₹)</h2>
+                        <h2>Total Sales</h2>
                         <p>₹ {{ total_sales_amount }}</p>
                     </div>
                 </div>
@@ -49,12 +49,12 @@
                             <option value="month" {% if filter_param=='month' %}selected{% endif %}>This Month</option>
                             <option value="year" {% if filter_param=='year' %}selected{% endif %}>This Year</option>
                         </select>
-                        <button type="submit" class="btn btn-primary">Apply Filter</button>
+                        <button type="submit" class="btn" style="background-color: #003366; color:#ffffff">Apply Filter</button>
                     </form>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="OrderTable">
-                        <thead class="thead-dark text-center">
+                        <thead class="thead text-center" style="background-color: #003366; color:#ffffff">
                             <tr>
                                 <th>Sale ID</th>
                                 <th>Item Name</th>
@@ -113,8 +113,8 @@ window.onload = function() {
         datasets: [{
             label: 'Total Sales',
             data: {{ sales|tojson }},
-            backgroundColor: 'rgba(75, 192, 192, 0.2)',
-            borderColor: 'rgba(75, 192, 192, 1)',
+            backgroundColor: 'rgba(0, 76, 153, 0.8)',
+            borderColor: 'rgba(0, 76, 153, 1)',
             borderWidth: 1
         }]
     };
@@ -147,7 +147,7 @@ window.onload = function() {
             label: 'Sales by Item',
             data: {{ sales_by_item_data|map(attribute='total_sales')|list|tojson }},
             fill: false,
-            borderColor: 'rgb(54, 162, 235)',
+            borderColor: 'rgba(51, 153, 255, 1)',
             tension: 0.1
         }]
     };
