WIP: Details and Charts

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4192,7 +4192,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: #fff;
+  --bs-card-bg: #f4f3f3;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
@@ -11380,7 +11380,7 @@ body {
 /* Card styling and animations */
 .manager-card {
   margin-top: 20px;
-  border: 1px solid #ddd;
+  border: 1px solid #666666;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
