--- a/templates/admin/admin_footer.html
+++ b/templates/admin/admin_footer.html
@@ -1,7 +1,7 @@
         <footer class="py-4 mt-auto" style="background-color: #f0f0f0;">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; Open Future Technologies 2024</div>
+                    <div class="text-muted">Copyright &copy; OpenFuture Technologies Pvt Ltd 2025</div>
                     <div>
                         <a href="#">Privacy Policy</a>
                         &middot;
