--- a/templates/super_distributor/sd_all_distributor.html
+++ b/templates/super_distributor/sd_all_distributor.html
@@ -39,6 +39,7 @@
         </div>
         <!-- Manager Cards -->
         <div class="row">
+            {% if all_super_distributors %}
             {% for sd in all_super_distributors %}
                 <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
                     <div class="card manager-card">
@@ -106,6 +107,15 @@
                     </div>
                 </div>
             {% endfor %}
+            {% else %}
+            <div class="alert text-center">
+                <p class="fs-3 text-center">
+                    <img src="{{ url_for('static', filename='images/not-available.gif') }}" alt="No Data Available" style="width: 100px; height: 100px;">
+                    <br>
+                    No Super Distributors !
+                </p>
+            </div>
+            {% endif %}
         </div>
         <style>
             .status-dot-container {
