--- a/templates/kitchen/all_kitchens.html
+++ b/templates/kitchen/all_kitchens.html
@@ -10,6 +10,24 @@
     {% include 'kitchen/kitchen_header.html'%}
 {% endif %}
 
+<style>
+    /* Modal Styling */
+    .modal-header {
+        background-color: #003366;
+        color: white;
+        font-weight: 600;
+    }
+
+    .modal-body {
+        background-color: #ffffff;
+    }
+
+    .btn-view:hover {
+        background-color: #0056b3;
+        cursor: pointer;
+    }
+</style>
+
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4 mt-3">
@@ -49,6 +67,7 @@
             </div>
             <!-- Kitchen Cards -->
             <div class="row">
+                {% if all_kitchens %}
                 {% for kitchen in all_kitchens %}
                     <div class="col-md-4 mb-4"> <!-- Added margin-bottom for spacing between cards -->
                         <div class="card manager-card">
@@ -117,6 +136,15 @@
                         </div>
                     </div>
                 {% endfor %}
+                {% else %}
+                    <div class="alert text-center">
+                        <p class="fs-3 text-center">
+                            <img src="{{ url_for('static', filename='images/spatula.gif') }}" alt="No Data Available" style="width: 100px; height: 100px;">
+                            <br>
+                            No Kitchens !
+                        </p>
+                    </div>
+                {% endif %}
             </div>
         <!-- Inline Styles for debugging purposes -->
           <!-- Modal for Kitchen -->
@@ -125,7 +153,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="kitchenModalLabel">Kitchen</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button style="color: #ffffff;" type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -135,7 +163,7 @@
                         <p><strong>Distributor:</strong> <span id="kitchenDistributor"></span></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-view btn-danger" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
