--- a/templates/kitchen/kitchen_index.html
+++ b/templates/kitchen/kitchen_index.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="mr-5"><b>₹ {{ total_sales_amount }} Total Sales</b></div>
                       </div>
-                      <a class="card-footer text-white clearfix small z-1" href="#">
+                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('sales.sales_report') }}">
                         <span class="float-left">View Details</span>
                         <span class="float-right">
                         </span>
