--- a/templates/distributor/d_index.html
+++ b/templates/distributor/d_index.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="mr-5"><strong>₹ {{ total_price }} Total Sales</strong></div>
                       </div>
-                      <a class="card-footer text-white clearfix small z-1" href="">
+                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('sales.sales_report') }}">
                         <span class="float-left">View Details</span>
                         <span class="float-right">
                         </span>
