--- a/templates/admin/sales_report.html
+++ b/templates/admin/sales_report.html
@@ -109,3 +109,84 @@
     <br>
 {% include 'admin/admin_footer.html' %}
 </div>
+
+<script>
+    window.onload = function() {
+        // Data for Bar Chart (Sales by Date)
+        var salesByDateData = {
+            labels: {{ sales_by_date_data|map(attribute='date')|list|tojson }},
+            datasets: [{
+                label: 'Total Sales',
+                data: {{ sales_by_date_data|map(attribute='total_sales')|list|tojson }},
+                backgroundColor: 'rgba(0, 76, 153, 0.8)',
+                borderColor: 'rgba(0, 76, 153, 1)',
+                borderWidth: 1
+            }]
+        };
+    
+        // Bar Chart for Sales by Date
+        var ctxBar = document.getElementById('salesByDateChart').getContext('2d');
+        new Chart(ctxBar, {
+            type: 'bar',
+            data: salesByDateData,
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                },
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'Sales by Date'
+                    }
+                }
+            }
+        });
+    
+        // Data for Line Chart (Sales by Item)
+        var salesByItemData = {
+            labels: {{ sales_by_item_data|map(attribute='item_name')|list|tojson }},
+            datasets: [{
+                label: 'Sales by Item',
+                data: {{ sales_by_item_data|map(attribute='total_sales')|list|tojson }},
+                fill: false,
+                borderColor: 'rgba(51, 153, 255, 1)',
+                tension: 0.1
+            }]
+        };
+    
+        // Line Chart for Sales by Item
+        var ctxLine = document.getElementById('salesByItemChart').getContext('2d');
+        new Chart(ctxLine, {
+            type: 'line',
+            data: salesByItemData,
+            options: {
+                responsive: true,
+                plugins: {
+                    title: {
+                        display: true,
+                        text: 'Sales by Item (Line Chart)'
+                    }
+                },
+                scales: {
+                    x: {
+                        title: {
+                            display: true,
+                            text: 'Item'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Total Sales'
+                        },
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    };
+    </script>
+    
